# knowledge-enrichment-demo

./: .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  deploy-prod.yml  deploy-stage.yml
infra/: main.bicep  main.json  prod.bicepparam  stage.bicepparam
infra/modules/: acr.bicep  container-app-env.bicep  container-app.bicep  role-assignment.bicep  search.bicep  storage.bicep
scripts/: download_corpus.py  run_pipelines.py
src/enrichment/: __init__.py  config.py  server.py
src/enrichment/models/: __init__.py
src/enrichment/pipeline/: __init__.py  baseline.py  enhanced.py
src/enrichment/services/: chat.py  chunking.py  content_understanding.py  search.py  storage.py
src/enrichment/static/: app.js  index.html  style.css
src/ifwebuildit/: __init__.py  config.py  server.py
src/ifwebuildit/pipeline/: baseline.py  enhanced.py
src/ifwebuildit/services/: chat.py  embedding.py  search.py  storage.py
src/ifwebuildit/static/: index.html  style.css
tests/: conftest.py  test_baseline_pipeline.py  test_chat_service.py  test_chunking.py  test_config.py  test_cu_service.py  test_embedding_service.py  test_enhanced_pipeline.py  test_models.py  test_search_service.py  test_server.py  test_storage_service.py
